FIX: alignment padding and margin

--- a/Web-Dev-Portfolio/style.css
+++ b/Web-Dev-Portfolio/style.css
@@ -17,7 +17,7 @@ body, html {
 
 
 .grid-item{
-justify-content: center;
+   
     text-align: center;
     font-weight: bold;
     /* border: 1px solid green; */
@@ -72,21 +72,16 @@ border-radius: 50px;
 .home{
    
     display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
-
-}
-
-.homebody , .article {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    margin:10px;
-    justify-content: center;
-    flex-wrap: nowrap;
-    align-self: center;
-    
    
+    padding-bottom: 50px;
+}
+.homebody , .article{
+    display: flex;
+    margin: 0;
+    justify-content:center;
+    flex-wrap: wrap;
+    padding-left: 150px;
+  
 }
 .homebody h1, .article_title{
     font-size: 70px;
@@ -136,7 +131,6 @@ body .sidenav, html .sidenav{
     background-color: grey;
     border: 1px solid darkgray;
     margin: 60px;
-    margin-left: 0;
     opacity: 50%;
     scroll-behavior: smooth;
 }
@@ -146,9 +140,6 @@ body .sidenav, html .sidenav{
     border: 2px solid lightgray;
     opacity: 100%;
     transform: 1px;
-}
-.sidenav li .sidenavline:active {
-    background-color: lightgreen;
 }
 
 .sidenavline {
@@ -168,27 +159,18 @@ body .sidenav, html .sidenav{
     justify-content: center;
 }
 
-.background , .contact{
-    display: flex;
-    flex-direction: column;
-   
-    justify-content: center;
-}
 .article_content {
     width: 70%;
+    margin-left: 50px;
    /* border: 1px solid; */
-box-sizing: border-box;
-    justify-self: center;
-    justify-content: center;
-  align-self: center;
-   
-  
-   flex-wrap: nowrap;
-  
+    display: flex;
+    align-self: center;
+    margin-left: 300px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .article_content p{
-    justify-content: center;
-    align-self: center;
+    justify-content: flex-start;
     font-size: 20px;
     letter-spacing: 4px;
     line-height: 1.8;
@@ -248,19 +230,17 @@ box-sizing: border-box;
     box-sizing: border-box;
     justify-content: center;
 }
-/* .work .article_title{
+.work .article_title{
     padding-right: 250px;
-} */
+}
 .work a , .links a{
    
     text-decoration: none !important;
     color: white;
 }
 table {
-    
-    align-self: center;
-    width: 80%;
-   
+    width: 100%;
+    vertical-align: center;
     padding-right: 50px;
     margin: 20px;
     margin-right: 20px;
@@ -268,7 +248,6 @@ table {
     font-size: 18px;
     margin-top: 0;
     color: white;
- 
 }
 table th {
     font-size: 25px;
@@ -289,12 +268,12 @@ tr {
     box-sizing: border-box;
     border: 1px solid lightgreen;
     padding: 20px;
-    margin: 20px;
+    margin: 50px;
     margin-bottom: 20px;
     vertical-align: middle;
     justify-content: center;
     margin-top: 10px;
-    width: 300px;
+    width: 400px;
 }
 .links:hover{
     background-color: lightgreen;
@@ -305,7 +284,7 @@ tr {
     color: black;
 }
 .mylinks .article_content {
-    width: 60%;
+    
     display: flex;
     flex-wrap: wrap;
     
@@ -326,7 +305,6 @@ tr {
     text-decoration: underline;
   }
   .skills .article_content {
-    width: 70%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -367,4 +345,129 @@ tr {
   
    border: 3px solid lightgreen;
  
+}
+@media only screen and (min-width: 1440px) and (max-width: 1025px) {
+  
+    .media {
+      width: 100%;
+    }
+  }
+@media only screen and (max-width:1024px) {
+
+body .sidenav, html .sidenav{
+    padding: 0;
+    margin: 0;
+
+  }
+  .sidenav li {
+    margin: 0;
+    margin-bottom: 50px;
+    margin-left: 10px;
+  }
+
+.image-container img {
+    width: 300px;
+}
+    .aboutme {
+        
+        align-self: center;
+    }
+    .article_title{
+        font-size: 50px;
+        padding-bottom: 20px;
+    }
+    .article_content{
+        width: 70%;
+        margin: 0;
+        padding-top: 0;
+       align-self: center;
+     
+       padding-left: 20%;
+
+    }
+    .article_content p{
+        padding: 0;
+        margin: 0;
+        align-self: center;
+    }
+    .skillsdiv{
+        width: 250px;
+    }
+    table {
+        
+        padding: 0;
+    }
+    table th {
+        width: 280px;
+    }
+    .mainrow{
+    padding-left: 0;
+    }
+    .mylinks .article_content{
+        width: 80%;
+    }
+    .links h3{
+        font-size: 15px;
+        width: 300px;
+        align-self: center;
+        vertical-align: middle;
+        margin: 0;
+        padding: 10px;
+    }
+    .mylinks .article_content {
+      justify-content: center;
+    }
+    .links{
+        width: 300px;
+        padding: 0;
+        margin: 10px;
+        border: 1px solid red;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+  }
+  
+@media only screen and (max-width:425px) {
+body{
+    padding: 0;
+    margin: 0;
+    margin-right: 0;
+    width: 100%;
+ }
+ .header{
+    font-size: 12px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+ }
+ .header h2{
+    font-size: 0px;
+ }
+
+ .grid-container{
+    padding: 0;
+    margin: 0;
+    margin-right: 0;
+    width: 100%;
+    align-self: center;
+    padding-left: 30px;
+    
+ }
+ .grid-item{
+    padding-right: 0;
+    border:2px solid white;
+    flex-wrap: nowrap;
+    justify-content: start;
+ }
+ .article_content{
+    width: 400px;
+    border: 1px solid white;
+ }
+ .header .nav1{
+    display: flex;
+    align-self: flex-end;
+    padding-left: 30px;
+ }
+
 }
